--- a/d/de/dem/democraticunderground.com.html
+++ b/d/de/dem/democraticunderground.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the democraticunderground.com privacy policy that was archived on 2016-12-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161206003517id_/http%3A//www.democraticunderground.com%3Fcom%3Dprivacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the democraticunderground.com privacy policy that was archived on 2017-04-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170407043403id_/http%3A//www.democraticunderground.com%3Fcom%3Dprivacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -79,7 +79,7 @@ function toggleDiv(divClass) {
     <div class="logo"><a href="/index.php"><img src="imgs/logo.gif" alt="Democratic Underground" border="0" title="Democratic Underground"></a></div>
     <p class="user-links"><a href="/?com=login&amp;create=1" class="username">Create new account</a> | <a href="/?com=login&amp;create=1">My Profile</a> | <a href="/?com=login&amp;create=1">My Account</a> | <a href="/?com=login&amp;create=1">My Bookmarks</a> | <a href="/?com=login&amp;create=1">My Inbox</a> | <a href="/?com=forum&amp;id=1256">Help</a> | <a href="/?com=login" class="username">Log in</a></p>
     <!-- TEMP Google Search -->
-  <form method="get" action="http://www.google.com/search">
+  <form method="get" action="https://www.google.com/search">
     <p class="head-search"><img src="imgs/googlesearch.gif" alt="Google search" title="Google search" width="75" height="23" border="0">
       <input type="text" name="q" size="31" maxlength="255" value="" class="simplesearch">
       <select name="sitesearch">
@@ -184,7 +184,7 @@ googletag.cmd.push(function() { googletag.display('div-gpt-ad-1377113338855-lb')
   <!-- ########## CONTENT ENDS HERE ########## -->
     
     <!-- CONTENT ENDS HERE -->
-        <div class="twocol-left"><ul id="browseforums">        <li id="f1001"><a href="#" class="ca-o" onclick="ajaxpage('/?com=qb&amp;id=1001&amp;action=close', 'f1001');return false">Main</a><ul>              <li><a href="/?com=forum&amp;id=1013" class="g-new">Announcements</a></li>              <li><a href="/?com=forum&amp;id=1256" class="f-new">Welcome &amp; Help</a></li>              <li><a href="/?com=forum&amp;id=1014" class="f-new">Latest Breaking News</a></li>              <li><a href="/?com=forum&amp;id=1016" class="f-new">Editorials &amp; Other Articles</a></li>              <li><a href="/?com=forum&amp;id=1017" class="f-new">Video &amp; Multimedia</a></li>              <li><a href="/?com=forum&amp;id=1002" class="f-new">General Discussion</a></li>              <li><a href="/?com=forum&amp;id=1251" class="f-new">2016 Postmortem</a></li>              <li><a href="/?com=forum&amp;id=1018" class="f-new">The DU Lounge</a></li></ul></li>        <li id="f1003"><a href="#" class="ca-x" onclick="ajaxpage('/?com=qb&amp;id=1003&amp;action=open', 'f1003');return false">My Subscriptions</a></li>        <li id="f1004"><a href="#" class="ca-x" onclick="ajaxpage('/?com=qb&amp;id=1004&amp;action=open', 'f1004');return false">Topics</a></li>        <li id="f1239"><a href="#" class="ca-x" onclick="ajaxpage('/?com=qb&amp;id=1239&amp;action=open', 'f1239');return false">Places</a></li></ul>    <!-- BEGIN AD CODE (SKYSCRAPER) -->
+        <div class="twocol-left"><ul id="browseforums">        <li id="f1001"><a href="#" class="ca-o" onclick="ajaxpage('/?com=qb&amp;id=1001&amp;action=close', 'f1001');return false">Main</a><ul>              <li><a href="/?com=forum&amp;id=1013" class="g-new">Announcements</a></li>              <li><a href="/?com=forum&amp;id=1014" class="f-new">Latest Breaking News</a></li>              <li><a href="/?com=forum&amp;id=1016" class="f-new">Editorials &amp; Other Articles</a></li>              <li><a href="/?com=forum&amp;id=1017" class="f-new">Video &amp; Multimedia</a></li>              <li><a href="/?com=forum&amp;id=1002" class="f-new">General Discussion</a></li>              <li><a href="/?com=forum&amp;id=1018" class="f-new">The DU Lounge</a></li>              <li><a href="/?com=forum&amp;id=1256" class="f-new">Community Help</a></li></ul></li>        <li id="f1003"><a href="#" class="ca-x" onclick="ajaxpage('/?com=qb&amp;id=1003&amp;action=open', 'f1003');return false">My Subscriptions</a></li>        <li id="f1004"><a href="#" class="ca-x" onclick="ajaxpage('/?com=qb&amp;id=1004&amp;action=open', 'f1004');return false">Topics</a></li>        <li id="f1239"><a href="#" class="ca-x" onclick="ajaxpage('/?com=qb&amp;id=1239&amp;action=open', 'f1239');return false">Places</a></li></ul>    <!-- BEGIN AD CODE (SKYSCRAPER) -->
     <div class="skyscraper-container">
       <div class="skyscraper-placeholder">
         <!-- DU3_Other_WIdeSkyscraper -->
@@ -201,7 +201,7 @@ googletag.cmd.push(function() { googletag.display('div-gpt-ad-1377113338855-ws')
     </div>
     </div>      <div class="footer">      <div class="footer-navlinks"><a href="/">DU Home</a> | <a href="/?com=latest_threads">Latest Threads</a> | <a href="/?com=greatest_threads">Greatest Threads</a> | <a href="/?com=forums">Forums &amp; Groups</a> | <a href="/?com=mysubs">My Subscriptions</a> | <a href="/?com=myposts">My Posts</a></div>
     
-    <p><a href="/?com=aboutus">About</a> | <a href="/?com=copyright">Copyright</a> | <a href="/?com=privacy">Privacy</a> | <a href="/?com=termsofservice">Terms of service</a> | <a href="/?com=contact">Contact</a></p>    <p><a href="/?com=inmemoriam">In Memoriam</a></p>    <p>© 2001 - 2016 Democratic Underground, LLC. Thank you for visiting.</p>   
+    <p><a href="/?com=aboutus">About</a> | <a href="/?com=copyright">Copyright</a> | <a href="/?com=privacy">Privacy</a> | <a href="/?com=termsofservice">Terms of service</a> | <a href="/?com=contact">Contact</a></p>    <p><a href="/?com=inmemoriam">In Memoriam</a></p>    <p>© 2001 - 2017 Democratic Underground, LLC. Thank you for visiting.</p>   
         <!-- THIS IS THE HELP WINDOW -->
         <div id="help-window">&nbsp;</div>
     <!-- END HELP WINDOW -->
