--- a/t/ta/tai/tailorstore.com.html
+++ b/t/ta/tai/tailorstore.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the tailorstore.com privacy policy that was archived on 2016-12-28.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161228062125id_/https%3A//www.tailorstore.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the tailorstore.com privacy policy that was archived on 2017-04-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170407221716id_/https%3A//www.tailorstore.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en" class="responsive " slick-uniqueid="3"><head>
 	<title>Privacy policy at Tailor Store</title>
@@ -56,7 +56,7 @@
 	<link rel="shortcut icon" href="/media/favicon.ico" type="image/x-icon">
 	<link rel="icon" href="/media/favicon.ico" type="image/x-icon">
 
-	<link rel="stylesheet" type="text/css" href="/layout/scss/get/f/gefjun__main_scss;">
+	<link rel="stylesheet" type="text/css" href="/layout/scss/get/f/gefjun__main_scss;/v/fd8a7218b60a388e7b98101d893240dc.css">
 
 		<link rel="apple-touch-icon" sizes="144x144" href="//cdn1.tailorstore.com/ui/apple-touch-icon-144x144.png">
 	<link rel="apple-touch-icon" sizes="114x114" href="//cdn2.tailorstore.com/ui/apple-touch-icon-114x114.png">
@@ -71,14 +71,14 @@
 	<meta name="msapplication-TileColor" content="#ffffff">
 	<meta name="msapplication-TileImage" content="//cdn1.tailorstore.com/ui/browserconfig/mstile-144.png">
 	<meta name="theme-color" content="#b11116">
-	<link href="https://fonts.googleapis.com/css?family=Permanent+Marker|Playfair+Display:400,700|Roboto:100,400,300,700,900" rel="stylesheet" type="text/css">
+	<link href="https://fonts.googleapis.com/css?family=Permanent+Marker|Roboto:100,400,300,700,900" rel="stylesheet" type="text/css">
 
 	<link href="https://plus.google.com/110715372162135153253" rel="publisher">
 
 	<script id="facebook-jssdk" src="//connect.facebook.net/en_US/sdk.js"></script><script async="" src="//www.googletagmanager.com/gtm.js?id=GTM-M8P5XH"></script><script type="text/javascript" src="/static/lib/mootools/MooTools-Core-1.6.0-compressed.js"></script>
-	<script type="text/javascript" src="/static/lib/mootools/MooTools-More-1.6.0-compressed.js"></script>
+	<script type="text/javascript" src="/static/lib/mootools/MooTools-More-1.6.0-compressed.js" defer=""></script>
 
-	<script src="/media/js/MooProgressBar.js" type="text/javascript"></script>
+	<script src="/media/js/MooProgressBar.js" type="text/javascript" defer=""></script>
 	<script src="https://apis.google.com/js/client:platform.js" async="" defer=""></script>
 
 	<script type="text/javascript">
@@ -91,21 +91,22 @@
 		window.currentPageURL = 'https://www.tailorstore.com/privacy';
 		window.shareServiceURL = 'https://www.tailorstore.com/share';
 		window.loginURL = '/login-to-your-account';
+
+		var priceFormat = '&#36;%';
+		var thousandsSeparator = ',';
+		var decimalSeparator = '.';
+
 				var jsLangStrings = {"UNDO":"Undo","OK":"OK","CLOSE":"Close"};
 	</script>
 
 	
 	
-			<script type="text/javascript" src="/javascript/u/gefjun__widgets:gefjun__framework:iscroll-probe=22fa03abf277157401faf37a64e116bf14299b3f&#10;.js"></script>
+			<script type="text/javascript" src="/javascript/u/gefjun__widgets:iscroll-probe=28cba98e81e9a0f7ad1eaa0c5598c2af9275aa46&#10;.js"></script>
 	
-	<script type="text/javascript" src="/layout/js/get/f/frontend__widgets__carousel_js;frontend__widgets__slideshow_js;frontend__widgets__menu_js;frontend__social__login_js;/m/1"></script>
+	<script type="text/javascript" src="/layout/js/get/f/frontend__widgets__carousel_js;frontend__misc_js;frontend__widgets__slideshow_js;frontend__widgets__menu_js;frontend__social__login_js;/m/1/v/83255cd191abfb4cb138d91ec70ac955.js" defer=""></script>
 
 	<script type="text/javascript">
-
-		var messages = []
 		var dataLayer = [];
-		
-		
 	</script>
 
 </head>
@@ -213,12 +214,12 @@
 	            <ul>
 		            <li><a href="/shirt-designer">Create a custom shirt</a></li>
 		            <li class="separator"></li>
-		            <li><a href="https://www.tailorstore.com/made-to-measure-shirts">All shirts</a></li>
-		            <li><a href="https://www.tailorstore.com/shirts/business-shirts">Business shirts</a></li>
-		            <li><a href="https://www.tailorstore.com/shirts/oxford-shirts">Oxford shirts</a></li>
+		            <li><a href="https://www.tailorstore.com/made-to-measure-shirts-for-men">All shirts</a></li>
+		            <li><a href="https://www.tailorstore.com/made-to-measure-shirts-for-men/business-shirts">Business shirts</a></li>
+		            <li><a href="https://www.tailorstore.com/made-to-measure-shirts-for-men/oxford-shirts">Oxford shirts</a></li>
 		            <li><a href="https://www.tailorstore.com/made-to-measure-shirts-for-men/linen-shirts">Linen shirts</a></li>
 		            <li><a href="https://www.tailorstore.com/ladies-shirts">Women's shirts </a></li>
-		            <li class="important"><a href="https://www.tailorstore.com/catalog/category/index/category_id/1428">Latest trends</a></li>
+		            <li class="important"><a href="https://www.tailorstore.com/made-to-measure-shirts-for-men/latest-trends">Latest trends</a></li>
 		            <li class="separator"></li>
 		            <li><a href="/shirts-made-to-measure">About our shirts</a></li>
 		            <li><a href="/fabrics">Our shirt fabrics</a></li>
@@ -242,6 +243,8 @@
 			        <li class="separator"></li>
 			        <li><a href="https://www.tailorstore.com/knitted-sweaters">Knitted sweaters</a></li>
 			        <li><a href="https://www.tailorstore.com/t-shirts">T-shirts</a></li>
+			        <li class="separator"></li>
+			        <li><a href="/polo-shirt-fabrics">Our polo fabrics</a></li>
 		        </ul>
 	        </li>
 		    <li>
@@ -258,7 +261,7 @@
 			        <li><a href="https://www.tailorstore.com/accessories/silk-neckties">Silk neckties</a></li>
 			        <li><a href="https://www.tailorstore.com/accessories/bow-ties">Bow ties</a></li>
 			        <li><a href="https://www.tailorstore.com/accessories/handkerchiefs">Pocket squares</a></li>
-			        <li><a href="https://www.tailorstore.com/accessories/cuff-links">Cuff links</a></li>
+			        <!--<li><a href=""></a></li>-->
 			        <li><a href="https://www.tailorstore.com/accessories/belts">Belts</a></li>
 			        <li><a href="https://www.tailorstore.com/catalog/category/index/category_id/1443">Tuxedo set</a></li>
 			        <li><a href="https://www.tailorstore.com/catalog/category/index/category_id/1442">Suspenders</a></li>
@@ -273,6 +276,8 @@
 			        <li><a href="https://www.tailorstore.com/fabric-sample-kits">Fabric sample kits</a></li>
 			        <li><a href="https://www.tailorstore.com/extras">Extras</a></li>
 			        <li><a href="https://www.tailorstore.com/underwear">Underwear</a></li>
+			        <li><a href="/pilot-shirts">Pilot shirts</a></li>
+			        <li><a href="/priest-shirts">Priest shirts</a></li>
 			        <li class="separator"></li>
 			        <li><a href="/underwear-configurator">Create custom underwear</a></li>
 		        </ul>
@@ -283,9 +288,17 @@
 	</div>
 </div>
 <div class="header-spacing">&nbsp;</div>
-<div id="messages"></div>
 		
-								<div id="messages"></div>
+						
+		<script type="text/javascript">
+
+	window.addEvent('domready', function() {
+
+		
+	});
+
+</script>
+<div id="messages"></div>
 				<article class="content" id="wrapper">
 			<div class="row">
 				<div class="fullwidth">
@@ -369,7 +382,7 @@ Fax: 0046 424242 088</p>
 							<li><a href="/jobs">Jobs</a></li>
 							<li><a href="/history-of-bespoke-shirts">History of the Shirt</a></li>
 							<li><a href="/style_guide">Style Guide</a></li>
-														<li><a href="/corporate_clothing">B2B</a></li>
+														<li><a href="/corporate_clothing">Corporate clothing</a></li>
 							<li><a href="/sustainable-clothes">Sustainable clothes</a></li>
 							<li><a href="/organic-cotton-gots-certified">Organic Cotton</a></li>
 							<li><a href="/co2-neutral">CO² neutral</a></li>
@@ -408,7 +421,7 @@ Fax: 0046 424242 088</p>
 					</div>
 		<div class="row">
 			<section class="copyright">
-				Copyright © 2003-2016 Tailor Store Sweden AB. All rights reserved.<br>
+				Copyright © 2003-2017 Tailor Store Sweden AB. All rights reserved.<br>
 				All works are property of their respective owners and may not be used elsewhere without written permission.<br>
 				<div class="host">ip-172-31-43-162</div>
 			</section>
@@ -427,7 +440,7 @@ Fax: 0046 424242 088</p>
 	<script type="text/javascript">
 
 		function logVisit() {
-			var req = new Request({url: '/cookiecheck.js/j3pdcd4674kd0fe697h0cvt9l0/privacy.us/843649447', method: 'get', async: true, evalResponse: true, noCache: true});
+			var req = new Request({url: '/cookiecheck.js/vjj0f7rt1i60cb7rl9p06q84j0/privacy.us/1409601718', method: 'get', async: true, evalResponse: true, noCache: true});
 			req.send('');
 		}
 
@@ -437,12 +450,11 @@ Fax: 0046 424242 088</p>
 		}
 
 	</script>
-	<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-516cfaa1618f31fd" async="async"></script>
-	<script type="text/javascript" async="" src="//platform.twitter.com/widgets.js"></script>
+	<script type="text/javascript" async="" src="//platform.twitter.com/widgets.js" defer=""></script>
 	<script src="https://apis.google.com/js/platform.js" async="" defer=""></script>
 	<div id="fb-root"></div>
 
-		<script type="text/javascript" src="//userlike-cdn-widgets.s3-eu-west-1.amazonaws.com/b79f371b51339fccd746755aa1a32f79d5bc614be8a72ea55f26a398a00272e3.js"></script>
+		<script type="text/javascript" src="//userlike-cdn-widgets.s3-eu-west-1.amazonaws.com/b79f371b51339fccd746755aa1a32f79d5bc614be8a72ea55f26a398a00272e3.js" defer=""></script>
 
 
 
