--- a/s/sc/scr/screene.com.html
+++ b/s/sc/scr/screene.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the screene.com privacy policy that was archived on 2016-10-09.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161009120055id_/http%3A//www.screene.com/privacypolicy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the screene.com privacy policy that was archived on 2017-04-08.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170408130652id_/http%3A//www.screene.com/privacypolicy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <title>Screene.com- Privacy Policy</title>
@@ -15,7 +15,7 @@ var casaleU=escape(window.location.href);
 var casaleHost=' type="text/javascript" src="http://as.casalemedia.com/s?s=';
 document.write('<scr'+'ipt'+casaleHost+'70993&amp;u=');
 document.write(casaleU+'&amp;f=1&amp;id='+casaleR+'"><\/scr'+'ipt>');
-//--></script><script type="text/javascript" src="http://as.casalemedia.com/s?s=70993&amp;u=https%3A//web.archive.org/web/20161009120055id_/http%253A//www.screene.com/privacypolicy.php&amp;f=1&amp;id=1867385170.641553"></script>
+//--></script><script type="text/javascript" src="http://as.casalemedia.com/s?s=70993&amp;u=https%3A//web.archive.org/web/20170408130652id_/http%253A//www.screene.com/privacypolicy.php&amp;f=1&amp;id=1867387933.2590427"></script>
 <!-- Casale Media 2007 (C) -->
 
 
@@ -89,7 +89,7 @@ document.write(casaleHost+'c?s=70993&amp;f=2&amp;id='+casaleR+'" target="_blank"
 document.write('<i'+'mg src="http://as'+casaleHost+'s?s=70993&amp;u='+casaleUU);
 document.write('&amp;f=2&amp;id='+casaleR+'&amp;if=0'+casaleWH+'border="0"><\/a>');
 document.write('<\/ifr'+'ame>');
-//--></script><iframe src="http://as.casalemedia.com/s?s=70993&amp;u=https%3A//web.archive.org/web/20161009120055id_/http%253A//www.screene.com/privacypolicy.php&amp;f=2&amp;id=1867385406.2003913" width="728" height="90" marginwidth="0" marginheight="0" frameborder="0" scrolling="no" allowtransparency="true"><a href="http://c.casalemedia.com/c?s=70993&amp;f=2&amp;id=1867385406.2003913" target="_blank"><img src="http://as.casalemedia.com/s?s=70993&amp;u=https%3A//web.archive.org/web/20161009120055id_/http%253A//www.screene.com/privacypolicy.php&amp;f=2&amp;id=1867385406.2003913&amp;if=0" width="728" height="90" border="0"></a></iframe><noscript>
+//--></script><iframe src="http://as.casalemedia.com/s?s=70993&amp;u=https%3A//web.archive.org/web/20170408130652id_/http%253A//www.screene.com/privacypolicy.php&amp;f=2&amp;id=1867388283.0499337" width="728" height="90" marginwidth="0" marginheight="0" frameborder="0" scrolling="no" allowtransparency="true"><a href="http://c.casalemedia.com/c?s=70993&amp;f=2&amp;id=1867388283.0499337" target="_blank"><img src="http://as.casalemedia.com/s?s=70993&amp;u=https%3A//web.archive.org/web/20170408130652id_/http%253A//www.screene.com/privacypolicy.php&amp;f=2&amp;id=1867388283.0499337&amp;if=0" width="728" height="90" border="0"></a></iframe><noscript>
 <iframe src="http://as.casalemedia.com/s?s=70993&u=http%3A%2F%2Fscreene.com&f=2&id=1"
 width="728" height="90" marginwidth="0" marginheight="0" frameborder="0" scrolling="no" 
 allowtransparency="true">
@@ -353,7 +353,7 @@ document.write(casaleHost+'c?s=70993&amp;f=3&amp;id='+casaleR+'" target="_blank"
 document.write('<i'+'mg src="http://as'+casaleHost+'s?s=70993&amp;u='+casaleUU);
 document.write('&amp;f=3&amp;id='+casaleR+'&amp;if=0'+casaleWH+'border="0"><\/a>');
 document.write('<\/ifr'+'ame>');
-//--></script><iframe src="http://as.casalemedia.com/s?s=70993&amp;u=https%3A//web.archive.org/web/20161009120055id_/http%253A//www.screene.com/privacypolicy.php&amp;f=3&amp;id=1867385437.0203097" width="120" height="600" marginwidth="0" marginheight="0" frameborder="0" scrolling="no" allowtransparency="true"><a href="http://c.casalemedia.com/c?s=70993&amp;f=3&amp;id=1867385437.0203097" target="_blank"><img src="http://as.casalemedia.com/s?s=70993&amp;u=https%3A//web.archive.org/web/20161009120055id_/http%253A//www.screene.com/privacypolicy.php&amp;f=3&amp;id=1867385437.0203097&amp;if=0" width="120" height="600" border="0"></a></iframe><noscript>
+//--></script><iframe src="http://as.casalemedia.com/s?s=70993&amp;u=https%3A//web.archive.org/web/20170408130652id_/http%253A//www.screene.com/privacypolicy.php&amp;f=3&amp;id=1867388313.3658767" width="120" height="600" marginwidth="0" marginheight="0" frameborder="0" scrolling="no" allowtransparency="true"><a href="http://c.casalemedia.com/c?s=70993&amp;f=3&amp;id=1867388313.3658767" target="_blank"><img src="http://as.casalemedia.com/s?s=70993&amp;u=https%3A//web.archive.org/web/20170408130652id_/http%253A//www.screene.com/privacypolicy.php&amp;f=3&amp;id=1867388313.3658767&amp;if=0" width="120" height="600" border="0"></a></iframe><noscript>
 <iframe src="http://as.casalemedia.com/s?s=70993&u=http%3A%2F%2Fscreene.com&f=3&id=1"
 width="120" height="600" marginwidth="0" marginheight="0" frameborder="0" scrolling="no"
 allowtransparency="true"> 
