--- a/b/ba/bay/baymirror.com.html
+++ b/b/ba/bay/baymirror.com.html
@@ -1,53 +1,48 @@
-<!--The following is the downloaded HTML source of the baymirror.com privacy policy that was archived on 2015-05-02.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20150502021956id_/http%3A//www.baymirror.com/Privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the baymirror.com privacy policy that was archived on 2017-04-09.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170409163429id_/http%3A//ww43.baymirror.com/privacy_policy.php) for the most accurate reproduction.-->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>PRIVACY POLICY</title>
-<style type="text/css">
-	html,body,h1,h2,ul,li,hr,p,div{margin:0;padding:0}
-	a{color:#000;outline:none;border:none;text-decoration:underline}
-	a:link{text-decoration:none}
-	a:visited{color:#000;text-decoration:underline}
-	a:hover,a:focus{text-decoration:none}
-	body{background:#fff;font:12px arial,helvetica,sans-serif;color:#666;min-width:800px}
-	#wrapper{width:780px;margin:0 auto;border:1px #fff solid;padding-bottom:10px}
-	#container{padding:10px}
-	.content{padding:0 0 0 8px}
-	h1{font-size:22px;background:#fff;height:45px;line-height:45px;padding-left:10px; color:#000;}
-	h2{font-size:16px;padding:8px 0;color:#000; background:#ddd;}
-	p{padding:8px 0;line-height:22px}
-	ul{margin:20px 0 20px 20px}
-	li{margin:0 0 5px 20px}
-	hr{border:0;color:#b2b2b2;border-bottom:1px #ccc solid;padding-top:8px;margin-bottom:2px;outline:0;height:1px;clear:both}
-</style>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd"><html><head>
+	<title>Privacy Policy</title>
+	<meta name="description" content="Privacy Policy for ww43.baymirror.com">
+	<style>
+	body
+	{
+		font-family: arial, san-serif;
+		font-size: 12px;
+	}
+	</style>
+ </head>
+ <body>
+	<h2>Web Site Privacy Policy</h2>
+	<p>
+	</p><ul><li><b>Overview</b></li>
+	<p>
+	Thank you for visiting ww43.baymirror.com (the "Web Site") and reviewing our Privacy Policy. Your privacy is important to us, and our policy is simple: we will collect no personally identifiable information about you when you visit the Web Site unless you choose to provide that information. This Privacy Policy does not describe information collection practices on other sites, including those linked to or from the Web Site.</p>
+	<li><b>What Type of Information We Collect </b></li>
+	<p>
+	The server on which the Web Site is located collects and saves only the default information customarily logged by web server software. Such information may include the date and time of your visit, the originating IP address, and the pages and images requested.
+	</p>
+	<p>
+	We partner with a limited number of third party behavioral advertising companies. In some cases, these companies serve ads and/or collect certain information when you visit the Web Site. The Web Site and third party advertisers may use cookies, a small file containing a string of characters that is sent to your computer when you visit a website, to collect non-personal information (name, address, email address, or telephone number) about your visits to this and other websites in order to provide advertisements of interest to you on the Web Site, other sites, and other forms of media.
+	</p>
+	<li><b>Uses May Include</b></li>
+		<ul type="circle">
+		  <li>We may use personal information to provide the services you've requested, including services that display customized content and advertising. </li><br>
+		  <li>We may also use personal information for auditing, research and analysis to operate and improve our technologies and services.
+		</li><br>
+		  <li>We may share aggregated non-personal information with third parties outside of The Web Site.
+		</li><br>
+		<li>When we use third parties to assist us in processing your personal information, we require that they comply with our Privacy Policy and any other appropriate confidentiality and security measures.
+		</li><br>
+		<li>We may also share information with third parties in limited circumstances, including when complying with legal process, preventing fraud or imminent harm, and ensuring the security of our network and services.
+		</li><br>
+		<li>The Web Site processes personal information on servers in the United States of America. In some cases, we process personal information on a server outside your own country.
+		</li><br>
+		</ul>
+	<p>
+	</p><li>If you would like to know more about these practices and your choices about not having this information used to target ads to you, please visit the Network Advertising Initiative opt-out page <a href="http://www.networkadvertising.org/managing/opt_out.asp">http://www.networkadvertising.org/managing/opt_out.asp</a> or the Digital Advertising Alliance at <a href="http://www.aboutads.info">aboutads.info</a>.</li>
 
-</head>
+	</ul>
+         
 
-<body><div id="wrapper">
-	<h1>PRIVACY POLICY</h1>
-	<div id="container">
-
-
-		<h2>&nbsp;1.  Acknowledgement and Acceptance of Terms.</h2>
-		<p>DNBIZ Ltd., the affiliate of Hangzhou 365 Internet Ltd., is  committed to protecting your privacy. This Privacy Statement sets forth our  current privacy practices with regard to the information we collect when you or  your computer interact with our website. By accessing this website, you  acknowledge and fully understand our Privacy Statement and freely consent to  the information collection and use practices described in this Website Privacy  Statement.</p>
-		<hr>
-		<h2>&nbsp;2. What  Information Do We Collect? </h2>
-		<p>DNBIZ may request that an entity applying for an account  provides us with certain personal information (such as its name, email address,  etc.) relevant to our provision of the various services offered on our site. We  do not collect any personal information other than that which is specifically  and knowingly provided to us. When we request information, we explain how it  may be used and give you an opportunity to request that the information not be  used for those purposes. We also give you an opportunity to opt out of future  communications from us. </p>
-		<hr>
-		<h2>&nbsp;3. With  Whom Do We Share Information? </h2>
-		<p>DNBIZ may share non-personal and non-personally identifiable  information about our users with advertisers, business partners, sponsors, and  other third parties. Such non-personally identifiable information may include  your IP address, sites(s) you visited and keyword searches you conducted on our  site(s). This information may allow such third parties to provide you  customized advertising. <br>
-In addition, we may partner with other parties in connection with the various  services offered on our site, such as credit card processors or email delivery  services. In such instances, we may share limited personal information that is  necessary for the third party to provide its services. These companies are  prohibited from using this information for any other purpose.</p>
-<hr>
-<h2>&nbsp;4. Cookies , web  Beacons and Other Monitoring Technologies? </h2>
-<p>Like most sites, for account management purposes, DNBIZ may use  cookies, web beacons and other monitoring technologies to compile anonymous  statistics about site users. Cookies are data files stored on your computer  that identify you as a unique user. In limited instances, we may allow third  party business partners to monitor our sites for the purpose of reporting user  traffic, statistics, advertisements, “click-throughs” and/or other activities  and to set their cookies on your computer, subject to agreement between such  business partner and us and subject to such business partner’s privacy policy.  Cookies and related monitoring technologies enable us to track user trends,  preferences and patterns. We may also receive and record information from your  computer and browser, including your IP address, site(s) you visited and  keyword searches you conducted on our site(s). The information helps us provide  improved services, including customized advertising. You can visit our site  without using cookies. Most browsers permit users to refuse cookies or to be  notified before a cookie is accepted. </p>
-<hr>
-	<p>This document was last updated on December 28, 2010.</p>
-</div>
-</div>
-
-
-<script type="text/javascript">
-var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
-document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F9c75dd9979aea3739b2c09ec1a0cfa11' type='text/javascript'%3E%3C/script%3E"));
-</script><script src=" https://hm.baidu.com/h.js?9c75dd9979aea3739b2c09ec1a0cfa11" type="text/javascript"></script></body></html>
+</body></html>
