--- a/s/se/sem/semplicelabs.com.html
+++ b/s/se/sem/semplicelabs.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the semplicelabs.com privacy policy that was archived on 2016-11-25.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161125155703id_/http%3A//www.semplicelabs.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the semplicelabs.com privacy policy that was archived on 2017-04-11.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170411020646id_/http%3A//www.semplicelabs.com/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><head>
 		<meta charset="UTF-8">
@@ -42,38 +42,7 @@
 		</script>
 			</head>
 	<body class="privacy-policy-page">
-		<div class="banner" style="background: #181819 !important;">
-	<div class="container">
-		<div class="row">
-			<div class="span12"><a class="close-banner"><svg version="1.1" id="Ebene_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="24px" height="24px" viewBox="0 0 24 24" enable-background="new 0 0 24 24" xml:space="preserve" fill="#ffffff">
-<g>
-	
-		<rect x="1.034" y="12" transform="matrix(0.7295 0.684 -0.684 0.7295 11.7953 -4.8264)" width="21.932" height="1"></rect>
-</g>
-<g>
-	
-		<rect x="11.5" y="1.535" transform="matrix(0.6833 0.7301 -0.7301 0.6833 12.9275 -4.8028)" width="1" height="21.931"></rect>
-</g>
-</svg>
-</a></div>
-		</div>
-		<div class="row">
-			<div class="span12"><a href="http://www.semplicelabs.com/get-semplice" class="site-transition"><img src="images/banner_blackfriday.jpg" class="banner-img"></a></div>
-		</div>
-	</div>
-</div>
-<script type="text/javascript">
-	$(document).ready(function () {
-		function show_banner() {
-			/* fade in overlay */
-            $('header').appendTo('#content').css('position', 'absolute');
-			$('.banner').slideDown( 1000 , 'easeInOutExpo');
-            $('body').addClass('banner-active');
-        };
 		
-		show_banner();
-	});
-</script>
 				<header>
 			<div class="container">
 				<div class="row">
@@ -269,7 +238,7 @@ Questions on our privacy policy can be directed to hello@semplicelabs.com</p>
 								<ul>
 									<li><a href="http://www.semplicelabs.com/faq" class="site-transition">FAQ</a></li>
 									<li><a href="http://help.semplicelabs.com" target="_blank">Support</a></li>
-									<li><a href="http://help.semplicelabs.com/customer/portal/articles/1647018-semplice-changelog" target="_blank">Changelog</a></li>
+									<li><a href="http://help.semplicelabs.com/customer/portal/articles/2762289-changelog-single" target="_blank">Changelog</a></li>
 									<li><a href="mailto:press@semplicelabs.com">Contact Us</a></li>
 								</ul>
 							</nav>
@@ -296,7 +265,7 @@ Questions on our privacy policy can be directed to hello@semplicelabs.com</p>
 					</div>
 					<div class="row">
 						<div class="span12">
-							<div class="copyright"><p><img src="images/footer_logo.png">Built with pride © 2016 Semplice Labs™</p><p></p></div>
+							<div class="copyright"><p><img src="images/footer_logo.png">Built with pride © 2017 Semplice Labs™</p><p></p></div>
 						</div>
 					</div>
 				</div>
@@ -354,8 +323,7 @@ Questions on our privacy policy can be directed to hello@semplicelabs.com</p>
 				while(el && (typeof el.tagName == 'undefined' || el.tagName.toLowerCase() != 'a' || !el.href)){
 					el = el.parentNode;
 				}
-
-				if(el && el.href && el.className !== 'buy-button' && el.className !== 'big-button'){
+				if(el && el.href && el.className !== 'buy-button' && el.className !== 'big-buy-button'){
 					/* link */
 					var link = el.href;
 					if(link.indexOf(location.host) == -1 && !link.match(/^javascript\:/i)){ /* external link */
